--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "thanos": "node index.js",
+    "thanos": "npm i && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
